V3 - Dockerización y correcciones varias - finalizado